--- a/pages/bebidas.html
+++ b/pages/bebidas.html
@@ -7,15 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamburgueseria</title>
 
-    <!--link de BOOTSTRAP-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
     <!--link de imagen de pestaña-->
     <link rel="shortcut icon" href="imagenes hamburguesa/logo_6.png" type="image/x-icon">
 
     <!--link WOW JS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <!--link de BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--link mi css-->
     <link rel="stylesheet" href="../estilo.css">
 
@@ -33,7 +32,7 @@
 
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid">
                 <img src="../imagenes hamburguesa/logo_6.png" alt="">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -72,52 +71,53 @@
         <!--##### MAIN #####-->
 
 
-        <main id="contenedor">
+        <main>
+
+            <div id="contenedor">
+
+                <div>
+                    <img src="../Imagenes bebidas/coca-cola-220ml.jpg" alt="">
+                    <h3>Coca-Cola</h3>
+                    <p>Lata Comun 250ml <br> $ 150</p>
+                    <button>Comprar</button>
+                </div>
+
+                <div>
+                    <img src="../Imagenes bebidas/coca-cola-zero-250ml.jpg" alt="">
+                    <h3>Coca-Zero</h3>
+                    <p>Lata Zero 250ml <br> $180</p>
+                    <button>Comprar</button>
+                </div>
+
+                <div>
+                    <img src="../Imagenes bebidas/fanta-naranja-250ml.jpg" alt="">
+                    <h3>Fanta</h3>
+                    <p>Lata Comun 250ml <br> $ 150</p>
+                    <button>Comprar</button>
+                </div>
 
 
-            <div>
-                <img src="../Imagenes bebidas/coca-cola-220ml.jpg" alt="">
-                <h3>Coca-Cola</h3>
-                <p>Lata Comun 250ml <br> $ 150</p>
-                <button>Comprar</button>
+                <div>
+                    <img src="../Imagenes bebidas/schweppes-tonica-250ml.jpg" alt="">
+                    <h3>Tonica</h3>
+                    <p>Lata Comun 250ml <br> $ 180</p>
+                    <button>Comprar</button>
+                </div>
+
+                <div>
+                    <img src="../Imagenes bebidas/sprite-lata-250ml.jpg" alt="">
+                    <h3>Sprite</h3>
+                    <p>Lata Comun 250ml <br> $ 150</p>
+                    <button>Comprar</button>
+                </div>
+
+                <div>
+                    <img src="../Imagenes bebidas/sprite-lata-zero-250ml.jpg" alt="">
+                    <h3>Sprite-zero</h3>
+                    <p>Lata Comun 250ml <br> $ 180</p>
+                    <button>Comprar</button>
+                </div>
             </div>
-
-            <div>
-                <img src="../Imagenes bebidas/coca-cola-zero-250ml.jpg" alt="">
-                <h3>Coca-Zero</h3>
-                <p>Lata Zero 250ml <br> $180</p>
-                <button>Comprar</button>
-            </div>
-
-            <div>
-                <img src="../Imagenes bebidas/fanta-naranja-250ml.jpg" alt="">
-                <h3>Fanta</h3>
-                <p>Lata Comun 250ml <br> $ 150</p>
-                <button>Comprar</button>
-            </div>
-
-
-            <div>
-                <img src="../Imagenes bebidas/schweppes-tonica-250ml.jpg" alt="">
-                <h3>Tonica</h3>
-                <p>Lata Comun 250ml <br> $ 180</p>
-                <button>Comprar</button>
-            </div>
-
-            <div>
-                <img src="../Imagenes bebidas/sprite-lata-250ml.jpg" alt="">
-                <h3>Sprite</h3>
-                <p>Lata Comun 250ml <br> $ 150</p>
-                <button>Comprar</button>
-            </div>
-
-            <div>
-                <img src="../Imagenes bebidas/sprite-lata-zero-250ml.jpg" alt="">
-                <h3>Sprite-zero</h3>
-                <p>Lata Comun 250ml <br> $ 180</p>
-                <button>Comprar</button>
-            </div>
-
         </main>
 
 
@@ -156,12 +156,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 </body>
 
