--- a/pages/hamburguesas.html
+++ b/pages/hamburguesas.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La mejor Hamburgueseria." />
+    <meta name="keywords" content="HAMBURGUESAS, BEBIDAS, COMIDA, RAPIDA" />
     <title>Menu/Hamburgueseria</title>
 
 
@@ -20,7 +22,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--link mi css-->
-    <link rel="stylesheet" href="../estilo.css">
+    <!-- <link rel="stylesheet" href="../estilo.css"> -->
     <!--link de SASS-->
     <link rel="stylesheet" href="../scss/stylo.css">
 </head>
