--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -1,140 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="La mejor Hamburgueseria." />
+    <meta name="keywords" content="HAMBURGUESAS, BEBIDAS, COMIDA, RAPIDA" />
     <title>Ubicacion/Hamburgueseria</title>
     <!--link de BOOTSTRAP-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
 
     <!--link de imagen de pestaña-->
-    <link rel="shortcut icon" href="../imagenes hamburguesa/logo_6.png " type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="../imagenes hamburguesa/logo_6.png "
+      type="image/x-icon"
+    />
 
     <!--link WOW JS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <!--link mi css-->
-    <link rel="stylesheet" href="../estilo.css">
-     <!-- link de SASS-->
-     <link rel="stylesheet" href="../scss/stylo.css">
+    <!-- <link rel="stylesheet" href="../estilo.css" /> -->
+    <!-- link de SASS-->
+    <link rel="stylesheet" href="../scss/stylo.css" />
+  </head>
 
-</head>
-
-
-<body>
-
-
-
-
-
+  <body>
     <!-- COMIENZA EL HEADER-->
 
-
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light ">
-            <div class="container-fluid">
-                <img src="../imagenes hamburguesa/logo_6.png" alt="">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="bebidas.html">Bebidas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="hamburguesas.html">Hamburguesas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="ubicacion.html">Ubicacion</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <img src="../imagenes hamburguesa/logo_6.png" alt="" />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="../index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="bebidas.html"
+                  >Bebidas</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="hamburguesas.html"
+                  >Hamburguesas</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="ubicacion.html"
+                  >Ubicacion</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="contacto.html"
+                  >Contacto</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
 
+    <!--##### MAIN #####-->
 
+    <main>
+      <div id="ubicacionFlex">
+        <div class="banner-ubicacion">
+          <iframe
+            class="mapa"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.4377623174596!2d-58.48504858476998!3d-34.61837618045567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9e8f863bbd1%3A0xb935690350e3cf3c!2sCampana%201367%2C%20C1416BGI%20CABA!5e0!3m2!1ses-419!2sar!4v1643121710332!5m2!1ses-419!2sar"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
+        </div>
+        <section class="informacion">
+          <h2>Ubicacio</h2>
+          <p>Campana 1367 CABA</p>
+          <h2>Telefono</h2>
+          <p>41512-2125</p>
+          <h2>WhatsApp</h2>
+          <p>(011) 1565422518</p>
+        </section>
+      </div>
+    </main>
 
+    <!-- FIN DEL MAIN-->
+    <div id="cajaFlex">
+      <!--CONTENEDOR PRINCIPAL-->
 
-    
-       
-
-
-        <!--##### MAIN #####-->
-
-        <main>
-            <div id="ubicacionFlex">
-                <div class="banner-ubicacion">
-                    <iframe class="mapa"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.4377623174596!2d-58.48504858476998!3d-34.61837618045567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9e8f863bbd1%3A0xb935690350e3cf3c!2sCampana%201367%2C%20C1416BGI%20CABA!5e0!3m2!1ses-419!2sar!4v1643121710332!5m2!1ses-419!2sar"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                </div>
-                <section class="informacion">
-                    <h2>Ubicacio</h2>
-                    <p>Campana 1367 CABA</p>
-                    <h2>Telefono</h2>
-                    <p> 41512-2125</p>
-                    <h2>WhatsApp</h2>
-                    <P>(011) 1565422518</P>
-                </section>
-            </div>
-
-        </main>
-
-
-
-        <!-- FIN DEL MAIN-->
-        <div id="cajaFlex">
- <!--CONTENEDOR PRINCIPAL-->
-
-        <!--COMIENZA EL FOOTER-->
-        <footer>
-            <div class=" flex-1 animate__animated animate__backInUp">
-                <section class="sucursal">
-                    <h2>SUCURSALES</h2>
-                    <ul>
-                        <li>Villa Del Parque</li>
-                        <li>Recoleta</li>
-                        <li>Palermo</li>
-                    </ul>
-                </section>
-                <section class="imagen-footer">
-                    <img src="../imagenes hamburguesa/logo_6.png" alt="">
-                </section>
-                <section class="iconos ">
-                    <a href="https://www.facebook.com/"><img src="../imagenes hamburguesa/logo-facebook.png" alt=""></a>
-                    <a href="https://www.instagram.com/"><img src="../imagenes hamburguesa/instagram.png" alt=""></a>
-                    <a href="https://twitter.com/"><img src="../imagenes hamburguesa/gorjeo.png" alt=""></a>
-                    <a href="https://www.whatsapp.com/"><img src="../imagenes hamburguesa/whatsapp.png" alt=""></a>
-                </section>
-            </div>
-        </footer>
-
-
-
-
+      <!--COMIENZA EL FOOTER-->
+      <footer>
+        <div class="flex-1 animate__animated animate__backInUp">
+          <section class="sucursal">
+            <h2>SUCURSALES</h2>
+            <ul>
+              <li>Villa Del Parque</li>
+              <li>Recoleta</li>
+              <li>Palermo</li>
+            </ul>
+          </section>
+          <section class="imagen-footer">
+            <img src="../imagenes hamburguesa/logo_6.png" alt="" />
+          </section>
+          <section class="iconos">
+            <a href="https://www.facebook.com/"
+              ><img src="../imagenes hamburguesa/logo-facebook.png" alt=""
+            /></a>
+            <a href="https://www.instagram.com/"
+              ><img src="../imagenes hamburguesa/instagram.png" alt=""
+            /></a>
+            <a href="https://twitter.com/"
+              ><img src="../imagenes hamburguesa/gorjeo.png" alt=""
+            /></a>
+            <a href="https://www.whatsapp.com/"
+              ><img src="../imagenes hamburguesa/whatsapp.png" alt=""
+            /></a>
+          </section>
+        </div>
+      </footer>
     </div>
     <!--FIN CONTENEDOR PRINCIPAL-->
 
-
     <!--link bootstrap y js del body-->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-
-</body>
-
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
